hphp/test/zend/good/Zend/tests/generators/errors/yield_outside_function_error.php.expectf

Fatal error: Yield can only be used inside a function in %s/yield_outside_function_error.php on line 3
